Modifies Main.java

--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,6 @@ bin/
 
 ### Mac OS ###
 .DS_Store
+
+src/main/java/com/abishekgoutham/UniqueWordsGenerator.java
+src/main/java/com/abishekgoutham/GenerateLargeFile.java
